<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/margen"
    android:layout_marginRight="@dimen/margen"
    android:layout_marginTop="@dimen/margen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smasite.aplicacion2.ConfirmacionDatos">


    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:text="@string/confirmar"
        android:textSize="@dimen/size_text_titulo"
        android:textAlignment="center"
        android:padding="@dimen/padding"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top"
            android:text="@string/nombre"
            android:textSize="@dimen/size_text_titulo"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"

            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"

            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionDos"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionDos"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/padding"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_btn"
            android:textSize="@dimen/size_text_btn"
            android:text="@string/editar_datos"
            android:textColor="@color/icons"
            android:textAlignment="center"
            android:onClick="editarDatos"
            android:background="@color/colorAccent"
            android:id="@+id/btnEditarDatos"
            android:padding="@dimen/padding"
            />


    </LinearLayout>


</LinearLayout>
